etc/tests/error/type/call-non-function.ny
;; expect: local call: expected callable, got int
use std.core

def int: x = 1
print(x())
